rebase: sync Java SDK PR with upstream main